# fvdb-reality-capture

./: .gitignore  CODEOWNERS  README.md  accumulate_depths.py  checkpoint.py  download_example_data.py  evaluate.py  evaluate_checkpoint.py  extract_geo_ortho.py  extract_mesh.py  extract_mesh_dlnr.py  extract_point_cloud.py  extract_splat_ply.py  extract_tsdf_from_splat.py  extract_usdz.py  make_mesh.py  pyproject.toml  resume.py  resume_from_checkpoint.py  train.py  train_chunked.py  train_colmap.py  utils.py  view_checkpoint.py  visualize.py  visualize_sfm_scene.py
.github/workflows/: debug.yml  docs.yml  static.yml  tests.yml
datasets/: __init__.py  colmap_dataset.py  dataset_cache.py  image_dataset_cache.py  logger.py  sfm_dataset.py  transformations.py
datasets/namegen/: __init__.py  _adjectives.py  (+1 more)
docs/: conf.py  index.rst  installation.rst
foundation_models/: .gitignore  config.py
fvdb_3dgs/: __init__.py
fvdb_reality_capture/: __init__.py
multigpu_scripts/: multigpu_split_colmap.py
notebooks/: .gitignore  radiance_field_and_mesh_reconstruction.ipynb  reconstructing_gaussian_splats.ipynb  training.ipynb
scripts/: extract_geo_ortho.py  plot_sfm_dataset_images.py  ply_to_usdz.py  upload_to_s3.py
tools/: __init__.py  _tsdf_from_splats_dlnr.py
training/: __init__.py  checkpoint.py  checkpoint_utils.py  scene_optimization_runner.py  utils.py
viewer/: camera_view.py  dict_label_view.py  gaussian_render_client_thread_pool.py  gaussian_splat_3d_view.py  single_camera_view.py  turbo_colormap.py  viewer.py  viewer_global_info_view.py  viewer_handle.py
(+139 files in other folders)
